@@ -154,6 +154,8 @@ images/push.png
 images/push48.png
 images/pushoff.png
 images/pushoff48.png
+images/pushon.png
+images/pushon48.png
 images/rain.png
 images/rain48.png
 images/rainraining.png
