@@ -17,6 +17,8 @@ Version 1.0.xxx (May xxth 2013)
 - Changed: Notification text 'Greater then' changed to 'Greater Than'
 - Implemented: 5th parameter for light/switch script (full status descriptor)
 - Fixed: PushOn button Off delay time now handles values above 255
+- Implemented: Push On switch type On/Off icon
+- Changed: LightwaveRF inline relay, "Open inline relay" now seen as "On"
 
 Version 1.0.484 (April 28th 2013)
 - Implemented: Raspberry Pi, updating via the web browser (Settings Tab)
